# TransforMol

./: .gitignore  LICENSE  README.md  pyproject.toml
transformol/agent_system/: README.md  __init__.py  agent.py  config.py  demo.ipynb  mol_utils.py
transformol/agent_system/tools/: __init__.py  reaction_tool.py  reactive_atom_tool.py  solv_deltag_tool.py  solv_strc_tool.py
transformol/predict_reaction/: data_loader.py  evaluate.py  model.py  process_data.ipynb  train.py
transformol/reactive_atom/: README.md  README.rst  data.py  loss.py  model.py  train.ipynb
transformol/solv_deltaG/: baseline_models_prediction.ipynb  baseline_models_training.ipynb  r2s2_dataset.py  r2s2_predict.py  r2s2_script.sh  r2s2_train.py
transformol/solv_deltaG/data/: AQM-sample-1.csv  AQM-sample-2.csv  CombiSolv-QM-sample-1.csv  CombiSolv-QM-sample-2.csv  featurize.py  process_data.ipynb  process_data.py
transformol/solv_deltaG/model/: gat.py  gcn.py  layer.py  mpnn.py
transformol/solv_strc/: README.md  README.rst  py1_generate_dataset.py  py2_create_feature_set.py  py3_train.py  py4_visualize_prediction.py
